--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -6,11 +6,10 @@ route: /components/form
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
-import { useRef, useState } from "react";
-import { Form } from ".";
 import { useFormState } from "@jobber/hooks";
-import { InputText } from "@jobber/components/InputText";
+import { Form } from "@jobber/components/Form";
 import { Content } from "@jobber/components/Content";
+import { InputText } from "@jobber/components/InputText";
 import { Button } from "@jobber/components/Button";
 
 # Form
