--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -58,3 +58,40 @@ import { Form } from "@jobber/components/Form";
     );
   }}
 </Playground>
+
+## Props
+
+<Props of={Form} />
+
+## onStateChange
+
+`onStateChange` will call whenever the state of the form is changed. It is best
+practice to use the [`useFormState`](/hooks/useFormState) hook with the
+`onStateChange` prop.
+
+<Playground>
+  {() => {
+    const [formState, setFormState] = useFormState();
+    return (
+      <>
+        <Form onSubmit={() => alert("submitted")} onStateChange={setFormState}>
+          <InputText
+            placeholder="First Name"
+            name="firstName"
+            validations={{
+              required: {
+                value: true,
+                message: "Tell us your name"
+              },
+              minLength: {
+                value: 3,
+                message: "Your name is to short."
+              }
+            }}
+          />
+        </Form>
+        <pre>{JSON.stringify(formState, null, 2)}</pre>
+      </>
+    );
+  }}
+</Playground>
