update the form tests

--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -16,7 +16,8 @@ import { Button } from "@jobber/components/Button";
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-Write a description about what Form component is trying to achieve.
+The `Form` component is a wrapper component that handles the submission and
+validation of forms.
 
 ```ts
 import { Form } from "@jobber/components/Form";
