--- a/packages/hooks/src/useFormState/useFormState.mdx
+++ b/packages/hooks/src/useFormState/useFormState.mdx
@@ -18,8 +18,8 @@ import { Divider } from "@jobber/components/Divider";
 [useState()](https://reactjs.org/docs/hooks-state.html) hook and suplies some
 default values.
 
-`useFormState` **must** only by used when using a [`<Form />`](/components/form)
-component. Otherwise, it is useless.
+`useFormState` should **only** only by used when using a
+[`<Form />`](/components/form) component.
 
 ```tsx
 import { useFormState } from "@jobber/hooks";
