--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -22,7 +22,7 @@ import { Button } from "@jobber/components/Button";
 
 <Playground>
   <Button
-    label="Submit"
+    label="Do the thing"
     onClick={() => {
       alert("✅");
     }}
@@ -47,7 +47,7 @@ In, or the main action in a dialog. There should be one Primary action per view,
 at most.
 
 <Playground>
-  <Button label="Submit" />
+  <Button label="Do the thing" />
 </Playground>
 
 ### Secondary
@@ -58,7 +58,7 @@ A secondary button should be used when...
   action
 
 <Playground>
-  <Button label="Submit" type="secondary" />
+  <Button label="Do the thing" type="secondary" />
 </Playground>
 
 ### Tertiary
@@ -67,7 +67,7 @@ A tertiary button should be used to complete actions within the view such as
 editing, revealing details, or navigating within the view.
 
 <Playground>
-  <Button label="Submit" type="tertiary" />
+  <Button label="Do the thing" type="tertiary" />
 </Playground>
 
 ## Learning Actions
@@ -151,7 +151,7 @@ Buttons can be disabled for a number of reasons, users may need to do an action
 first or they may not be ready to use that button.
 
 <Playground>
-  <Button label="Submit" disabled />
+  <Button label="Do the thing" disabled />
 </Playground>
 
 ## Sizes
@@ -161,13 +161,13 @@ Buttons comes in 2 extra sizes.
 ### Small
 
 <Playground>
-  <Button label="Submit" size="small" />
+  <Button label="Do the thing" size="small" />
 </Playground>
 
 ### Large
 
 <Playground>
-  <Button label="Submit" size="large" />
+  <Button label="Do the thing" size="large" />
 </Playground>
 
 ## Icons
