--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -53,7 +53,11 @@ import { Form } from "@jobber/components/Form";
               }
             }}
           />
-          <Button label="Submit Form" disabled={!isDirty || !isValid} />
+          <Button
+            label="Submit Form"
+            submit={true}
+            disabled={!isDirty || !isValid}
+          />
         </Content>
       </Form>
     );
