--- a/packages/design/src/animation.mdx
+++ b/packages/design/src/animation.mdx
@@ -5,27 +5,27 @@ route: /animation
 ---
 
 # Animation
-### Patterns
+## Patterns
 
 Animations in Jobber fall under categories based on their purpose:
 
-**Reveal** 
+###Reveal
 
 Reveals are used to show and hide information on the screen. For example, toasts, modals, sidebars appearing and disappearing on the screen.
 
-**State change**
+###State change
 
 State changes are used to inform the user that a context change is taking place. This is used when the object has changed state due to user interaction (e.g. hover and focus states).
 
-**Emphasis**
+###Emphasis
 
 Emphasis is used to bring attention to something on already on the screen. For example, when you want to guide users to a particular part of the interface for onboarding or learning purposes.
 
-**Delighter**
+###Delighter
 
 Delighters can be used occasionally to create surprise and delight, and can give personality to our brand. These can be used to reinforce success in an important milestones in a user's journey.
 
-### Timing
+## Timing
 Timing is used for animation durations.
 
 Use judgement when determining the appropriate timing. Duration will depend on the size of the element and the distance it covers. Animations for larger elements or longer distances should be longer than smaller elements or shorter distances.
@@ -39,7 +39,7 @@ Use judgement when determining the appropriate timing. Duration will depend on t
 | `--duration-slow`          | 400ms | large elements traversing across large area
 | `--duration-slowest`          | 500ms | page transitions
 
-### Easing
+## Easing
 | Name        | Value                  | Examples of use              |
 | :--------------- | :--------------------- | :--------------------- |
 | `--ease-in` | cubic-bezier(0.4, 0, 1, 0.9, 0)    | for exiting elements that don’t fade out
