--- a/packages/design/src/animation.mdx
+++ b/packages/design/src/animation.mdx
@@ -25,10 +25,9 @@ Emphasis is used to bring attention to something on already on the screen. For e
 
 Delighters can be used occasionally to create surprise and delight, and can give personality to our brand. These can be used to reinforce success in an important milestones in a user's journey.
 
-## Timing
-Timing is used for animation durations.
+## Durations
 
-Use judgement when determining the appropriate timing. Duration will depend on the size of the element and the distance it covers. Animations for larger elements or longer distances should be longer than smaller elements or shorter distances.
+Use judgement when determining the appropriate durations for animations. This will depend on the size of the element and the distance it covers. Animations for larger elements or longer distances should be longer than smaller elements or shorter distances.
 
 
 | Name        | Value                  | Examples of use              |
