--- a/packages/design/src/animation.mdx
+++ b/packages/design/src/animation.mdx
@@ -10,20 +10,19 @@ route: /animation
 
 Animations in Jobber fall under categories based on their purpose:
 
-
-###Reveal
+### Reveal
 
 Reveals are used to show and hide information on the screen. For example, toasts, modals, sidebars appearing and disappearing on the screen.
 
-###State change
+### State change
 
 State changes are used to inform the user that a context change is taking place. This is used when the object has changed state due to user interaction (e.g. hover and focus states).
 
-###Emphasis
+### Emphasis
 
 Emphasis is used to bring attention to something on already on the screen. For example, when you want to guide users to a particular part of the interface for onboarding or learning purposes.
 
-###Delighter
+### Delighter
 
 Delighters can be used occasionally to create surprise and delight, and can give personality to our brand. These can be used to reinforce success in an important milestones in a user's journey.
 
@@ -42,7 +41,7 @@ Use judgement when determining the appropriate durations for animations. This wi
 
 ## Easing
 
-Animations are linear by default, but this lends and uncanny robotic feeling to the motion of an element. Easing creates a more natural, pleasing transition between animation states to mimic the acceleration and deceleration of objects in the real world.
+Animations are linear by default, but this lends an uncanny robotic feeling to the motion of an element. Easing creates a more natural, pleasing transition between animation states to mimic the acceleration and deceleration of objects in the real world.
 
 ###Ease in
 
