update script to write whole file
appearance still wonly

--- a/docs/Playground.mdx
+++ b/docs/Playground.mdx
@@ -15,16 +15,19 @@ import { Checkbox } from "@jobber/components/Checkbox";
 import { ConfirmationModal } from "@jobber/components/ConfirmationModal";
 import { Content } from "@jobber/components/Content";
 import { DescriptionList } from "@jobber/components/DescriptionList";
+import { Divider } from "@jobber/components/Divider";
 import { Emphasis } from "@jobber/components/Emphasis";
 import { FeatureSwitch } from "@jobber/components/FeatureSwitch";
 import { FormatDate } from "@jobber/components/FormatDate";
 import { FormatEmail } from "@jobber/components/FormatEmail";
+import { FormatFile } from "@jobber/components/FormatFile";
 import { FormatRelativeDateTime } from "@jobber/components/FormatRelativeDateTime";
 import { FormatTime } from "@jobber/components/FormatTime";
 import { FormField } from "@jobber/components/FormField";
 import { Heading } from "@jobber/components/Heading";
 import { Icon } from "@jobber/components/Icon";
 import { InlineLabel } from "@jobber/components/InlineLabel";
+import { InputFile } from "@jobber/components/InputFile";
 import { InputGroup } from "@jobber/components/InputGroup";
 import { InputNumber } from "@jobber/components/InputNumber";
 import { InputPassword } from "@jobber/components/InputPassword";
@@ -44,16 +47,13 @@ import { Switch } from "@jobber/components/Switch";
 import { Table } from "@jobber/components/Table";
 import { Tabs } from "@jobber/components/Tabs";
 import { Text } from "@jobber/components/Text";
+import { Toast } from "@jobber/components/Toast";
 import { Tooltip } from "@jobber/components/Tooltip";
 import { Typography } from "@jobber/components/Typography";
 
 # Playground
 
 Use All the Components!! Maybe this playground needs a button?
-
-```ts
-<Button label="🤖 beep 🤖" onClick={() => alert("👾 boop 👾")} />
-```
 
 ## Coming soon, probably:
 
