feat(components): BREAKING CHANGE: FormField Validation (#352)
BREAKING CHANGE:

* add react-hook-form

* Adds validation to field

* Littered TODOs

* Uses inputValidation component

* update valid to validations prop

* Makes onValidation work again

* Make input validation docs work same as old atlantis

* Add custom validation example

* Fix the validation on input password docs

* Fixed input number validation

* Change FormField from forwardRef to use ref as a prop

* Force a name on fields

* Fix validation tests on FormField

* Fix inputNumber tests

* Some easy PR fixes

* Styles the validation message

* Add TS exceptions

* Styling changes for Validation mesages

* Removes Icon from validation message

* Case inputRef

* Cast the other ref

* feat(components): Form component (#357)

* Adds the Form component

* Allow button component to submit forms

* Expost some form state

* typo fix

* Adds type for ButtonType

* Adds form State

* more tests on form

* fix linting issues

* useFormState docs

* Add to form mdx

* update the form tests

* Add submit prop to button

* Add form submit docs to button

* fix(components): Fixes types on useFormState (#360)

* typo fix

* Add exclamation mark for prerelease

* Fixes the type on useFormState

* remove some things that were there for a prerelease

--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -43,21 +43,18 @@ import { InputPassword } from "@jobber/components/InputPassword";
 ## With Error
 
 <Playground>
-  {() => {
-    const [value, setValue] = useState("password");
-    return (
-      <InputPassword
-        value={value}
-        onChange={setValue}
-        placeholder="Password"
-        validations={[
-          {
-            shouldShow: value.length < 10,
-            message: "Passwords should be at least 10 characters.",
-            status: "error"
-          }
-        ]}
-      />
-    );
-  }}
+  <InputPassword
+    placeholder="Password"
+    name="password"
+    validations={{
+      required: {
+        value: true,
+        message: "You need a password."
+      },
+      minLength: {
+        value: 10,
+        message: "Passwords should be at least 10 characters."
+      }
+    }}
+  />
 </Playground>
