--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -27,7 +27,10 @@ import { Form } from "@jobber/components/Form";
   {() => {
     const [{ isDirty, isValid }, setFormState] = useFormState();
     return (
-      <Form onSubmit={() => alert("submitted")} onStateChange={setFormState}>
+      <Form
+        onSubmit={() => alert("Submitted 🎉🎉🎉")}
+        onStateChange={setFormState}
+      >
         <Content>
           <InputText
             placeholder="First Name"
