Adds a description to the checkbox

--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -27,6 +27,7 @@ import { Checkbox } from "@jobber/components/Checkbox";
         checked={checked}
         label="Save card for future use"
         onChange={setChecked}
+        description="If you save your card now, you'll never need to save it again."
       />
     );
   }}
