--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -106,3 +106,8 @@ that the user has lost control of the interface.
     label="Subscribe on marketing emails"
   />
 </Playground>
+
+## Related components
+
+* To let people turn a setting on or off instantly, use a [Switch](switch).
+* To present a set of options where people can only make a single choice, use a [Radio Group](radio-group).
