--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -63,3 +63,9 @@ following:
 ## Props
 
 <Props of={FormatFile} />
+
+---
+
+## Related components
+
+* For a thumbnail representation of a Jobber user or organization, use [Avatar](avatar).
