--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -86,3 +86,9 @@ Used to group contents after a [heading 4](#heading-4).
 ## Props
 
 <Props of={Heading} />
+
+---
+
+## Related components
+
+* For introductory text after a page title or paragraph text for body copy, use [Text](text).
