--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -68,4 +68,4 @@ following:
 
 ## Related components
 
-* For a thumbnail representation of a Jobber user or organization, use [Avatar](avatar).
+* For a thumbnail representation of a user, use [Avatar](avatar).
