remove some white spaces

--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -107,9 +107,10 @@ that presents a confirm modal.
     );
   }}
 </Playground>
-  
+
 ## Related components
-  
-* To present non-blocking, contextual, text-only content, use a [Tooltip](tooltip). 
-* To simply present information for users to view, edit, or for a temporary change of context, use a regular [Modal](modal).
-  
+
+- To present non-blocking, contextual, text-only content, use a
+  [Tooltip](tooltip).
+- To simply present information for users to view, edit, or for a temporary
+  change of context, use a regular [Modal](modal).
