feat(components): Add description to Checkbox (#365)
* Adds a description to the checkbox

* Add some extra tests

* Update the font size of the helper text

--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -89,6 +89,18 @@ discrete options, such as “fixed price” and “per visit” invoicing option
   }}
 </Playground>
 
+## With a description
+
+If there is more information needed for a `Checkbox`, use the `description` prop
+instead of a longer `label`
+
+<Playground>
+  <Checkbox
+    label="Save card for future use"
+    description="If you save your card now, you'll never need to save it again."
+  />
+</Playground>
+
 ## Disabled
 
 A disabled checkbox cannot be operated by the user. Your primary goal should be
