--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -342,4 +342,5 @@ using either promises or `await` in `getOptions`.
 
 - If you want to present a list of predefined options without text input, use a
   [Select](select) instead.
-- If no suggests are required for the text input, use [InputText](input-text).
+- If autocompleted results are not required for the text input, use
+  [InputText](input-text) instead.
