--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -52,7 +52,8 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
       const filterRegex = new RegExp(text, "i");
       return options.filter(option => option.label.match(filterRegex));
     }
-  }}
+}}
+
 </Playground>
 
 ## Props
@@ -338,6 +339,8 @@ using either promises or `await` in `getOptions`.
 </Playground>
 
 ## Related components
-* If you want to present a list of predefined options without text input, use a [Select](select)
-instead. 
-* If no suggests are required for the text input, use [InputText](input-text).
+
+- If you want to present a list of predefined options without text input, use a
+  [Select](select) instead.
+- If autocompleted results are not required for the text input, use
+  [InputText](input-text) instead.
