--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -106,9 +106,9 @@ practice to use the [`useFormState`](/hooks/useFormState) hook with the
   }}
 </Playground>
 
-## Triggering Validation
+## Triggering Submission
 
-Validation of a `Form` can be done outside of the `Form` itself by using the
+Submission of a `Form` can be done outside of the `Form` itself by using the
 `validate` function that is exposed.
 
 <Playground>
@@ -142,75 +142,7 @@ Validation of a `Form` can be done outside of the `Form` itself by using the
         </Form>
         <Button
           label="Submit Form from the outside"
-          onClick={() => formRef.current.validate()}
-        />
-      </Content>
-    );
-  }}
-</Playground>
-
-## Validate A Single Field
-
-In the same way that you can validate a `Form` from outside of the `Form`. You
-can also validate specific fields by passing and array of field names to the
-`validate` method.
-
-<Playground>
-  {() => {
-    const formRef = useRef();
-    return (
-      <Content>
-        <Form onSubmit={() => alert("Submitted 🎉🎉🎉")} ref={formRef}>
-          <Content>
-            <InputText
-              placeholder="First Name"
-              name="firstName"
-              validations={{
-                required: {
-                  value: true,
-                  message: "Tell us your name"
-                }
-              }}
-            />
-            <InputText
-              placeholder="Middle Name"
-              name="middleName"
-              validations={{
-                required: {
-                  value: true,
-                  message: "Tell us your middle name."
-                }
-              }}
-            />
-            <InputText
-              placeholder="Last Name"
-              name="lastName"
-              validations={{
-                required: {
-                  value: true,
-                  message: "Tell us your last name"
-                }
-              }}
-            />
-          </Content>
-        </Form>
-        <Button
-          fullWidth={true}
-          type="tertiary"
-          label="Validate first name"
-          onClick={() => formRef.current.validate(["firstName"])}
-        />
-        <Button
-          fullWidth={true}
-          type="tertiary"
-          label="Validate first and last name"
-          onClick={() => formRef.current.validate(["firstName", "lastName"])}
-        />
-        <Button
-          fullWidth={true}
-          type="tertiary"
-          label="Validate all fields"
-          onClick={() => formRef.current.validate()}
+          onClick={() => formRef.current.submit()}
         />
       </Content>
     );
