--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -5,10 +5,12 @@ route: /components/form
 ---
 
 import { Playground, Props } from "docz";
+import { useRef } from "react";
 import { ComponentStatus } from "@jobber/docx";
 import { useFormState } from "@jobber/hooks";
 import { Form } from "@jobber/components/Form";
 import { Content } from "@jobber/components/Content";
+import { Card } from "@jobber/components/Card";
 import { InputText } from "@jobber/components/InputText";
 import { Button } from "@jobber/components/Button";
 
@@ -100,6 +102,49 @@ practice to use the [`useFormState`](/hooks/useFormState) hook with the
         </Form>
         <pre>{JSON.stringify(formState, null, 2)}</pre>
       </>
+    );
+  }}
+</Playground>
+
+## Triggering Submission
+
+Submission of a `Form` can be done outside of the `Form` itself by using the
+`validate` function that is exposed.
+
+<Playground>
+  {() => {
+    const formRef = useRef();
+    return (
+      <Content>
+        <Form onSubmit={() => alert("Submitted 🎉🎉🎉")} ref={formRef}>
+          <Content>
+            <InputText
+              placeholder="First Name"
+              name="firstName"
+              validations={{
+                required: {
+                  value: true,
+                  message: "Tell us your name"
+                }
+              }}
+            />
+            <InputText
+              placeholder="Last Name"
+              name="lastName"
+              validations={{
+                required: {
+                  value: true,
+                  message: "Tell us your last name."
+                }
+              }}
+            />
+          </Content>
+        </Form>
+        <Button
+          label="Submit Form from the outside"
+          onClick={() => formRef.current.submit()}
+        />
+      </Content>
     );
   }}
 </Playground>
