--- a/packages/components/src/Drawer/Drawer.mdx
+++ b/packages/components/src/Drawer/Drawer.mdx
@@ -6,45 +6,37 @@ route: /components/drawer
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
-import { Content } from "@jobber/components/Content";
-import { Text } from "@jobber/components/Text";
-import { Heading } from "@jobber/components/Heading";
-import { Button } from "@jobber/components/Button";
+import { useState } from "react";
+
 import { Drawer } from ".";
+import { Content } from "@jobber/components/Content";
+import { Button } from "@jobber/components/Button";
+import { Text } from "../Text";
+import { Page } from "../Page";
 
-# Drawer
+#Drawer
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="pre" responsive="no" accessible="yes" />
 
 Drawer is a UI element meant to store content in a sidebar with a visibility
 toggle.
 
 ```ts
-import { Drawer } from "@jobber/components/Drawer";
+import { Page } from "@jobber/components/Page";
 ```
 
 <Playground>
-  <div style={{
-    display: 'grid',
-    'grid-template-columns': '[main] auto [sidebar] minmax(min-content, max-content)',
-    'grid-gap': '16px',
-    'height': '600px'
-  }}>
-    <Content>
-      <Heading level={2}>Lorem ipsum</Heading>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neque ante, tincidunt sit amet suscipit quis, condimentum id tortor. Cras purus urna, pretium sit amet iaculis nec, eleifend quis ipsum. Fusce id nisi vitae lectus ullamcorper tincidunt. Suspendisse porttitor felis mauris, id pellentesque massa mollis non. Pellentesque luctus quis lacus nec elementum. Suspendisse eu tempor velit, eu efficitur nisl. Cras faucibus risus non orci facilisis porta. Sed malesuada ex eget ligula tincidunt efficitur sed nec urna. Curabitur consectetur, sem ultricies hendrerit fringilla, nulla quam luctus metus, id rhoncus lorem ex a tortor. Morbi mattis sed magna sit amet tempus. Mauris ac nunc ut massa efficitur scelerisque ac et ex. Duis egestas porttitor auctor. Pellentesque lobortis turpis commodo leo ultrices, ac tincidunt sapien egestas. Phasellus finibus, ante eu condimentum facilisis, tellus urna accumsan augue, eu auctor orci purus id turpis. Sed at augue ut justo dapibus malesuada. </Content>
-    <Drawer title="A drawer">
-      <Content>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neque ante, tincidunt sit amet suscipit quis, condimentum id tortor. Cras purus urna, pretium sit amet iaculis nec, eleifend quis ipsum. Fusce id nisi vitae lectus ullamcorper tincidunt. Suspendisse porttitor felis mauris, id pellentesque massa mollis non. Pellentesque luctus quis lacus nec elementum. Suspendisse eu tempor velit, eu efficitur nisl. Cras faucibus risus non orci facilisis porta. Sed malesuada ex eget ligula tincidunt efficitur sed nec urna. Curabitur consectetur, sem ultricies hendrerit fringilla, nulla quam luctus metus, id rhoncus lorem ex a tortor. Morbi mattis sed magna sit amet tempus. Mauris ac nunc ut massa efficitur scelerisque ac et ex. Duis egestas porttitor auctor. Pellentesque lobortis turpis commodo leo ultrices, ac tincidunt sapien egestas. Phasellus finibus, ante eu condimentum facilisis, tellus urna accumsan augue, eu auctor orci purus id turpis. Sed at augue ut justo dapibus malesuada. </Content>
-    </Drawer>
+  {() => {
+    const [modalOpen, setModalOpen] = useState(false);
+    return(
+      <Page
+        title="Notifications"
+        intro=""
+      >
+      <Drawer title="me drawer" open={modalOpen}></Drawer>
+      <Button onClick={() => setModalOpen(!modalOpen)} label="Toggle Drawer"></Button>
+      <Text>Page content here</Text>
+  </Page>)
+  }}
 
-  </div>
 </Playground>
-
-## Design & Usage Guidelines
-
-The `Drawer` component comes with no spacing around it. This means that it
-should be used within a [`Content`](/components/content) component.
-
-## Props
-
-<Props of={Drawer} />
