feat(components): update FormatDate design docs
Add design guidelines to FormatDate

--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -26,6 +26,14 @@ import { FormatDate } from "@jobber/components/FormatDate";
   <FormatDate date={new CivilDate(2020, 2, 26)} />
 </Playground>
 
+## Design & Usage Guidelines
+
+Use FormatDate to ensure that a date is represented as expected. 
+
+If there are additional text styling concerns, wrap FormatDate in a [Text](https://atlantis.getjobber.com/packages-components-src-text-text) component.
+
+If the formatted date is intended to be part of a heading, wrap FormatDate in a [Heading](https://atlantis.getjobber.com/packages-components-src-heading-heading) component.
+
 ## Props
 
 <Props of={FormatDate} />
