Add numberOfLines property to Text component to truncate the text

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -69,3 +69,20 @@ only be used right after a page title.
     Drag to rearrange the order that fields show up in Jobber
   </Text>
 </Playground>
+
+## number Of Lines
+
+Used to truncate large text with `...` based on line wrapping, such that the
+total number of lines does not exceed this number.
+
+<Playground>
+  <Text numberOfLines="3">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum purus sit
+    amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu ligula nec metus suscipit feugiat.
+
+    Etiam sapien sapien, mattis eu tincidunt quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus fringilla. Cras mi ante,
+    euismod nec tortor in, tempus mollis nulla. Etiam eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus blandit vitae.
+    Aenean vitae commodo metus. Fusce eu risus quis orci pharetra consequat nec nec libero.
+
+  </Text>
+</Playground>
