Test snacks embed

--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -88,3 +88,8 @@ removed, and it may be worth re-assessing the hierarchy of your interface.
     </Content>
   </Card>
 </Playground>
+
+## Snacks Embed Test
+
+<div data-snack-id="@chrismurray/sample-component" data-snack-platform="web" data-snack-preview="true" data-snack-theme="light" style="overflow:hidden;background:#fafafa;border:1px solid rgba(0,0,0,.08);border-radius:4px;height:505px;width:100%"></div>
+<script async src="https://snack.expo.io/embed.js"></script>
