--- a/packages/hooks/src/useOnKeyDown/useOnKeyDown.mdx
+++ b/packages/hooks/src/useOnKeyDown/useOnKeyDown.mdx
@@ -13,7 +13,7 @@ import { Text } from "@jobber/components/Text";
 
 `useOnKeyDown` is an extremly simple hook that can be for adding the keydown event handler when the component is mounted and remove them when it unmount.
 
-`useOnKeyDown` should **only** only by used when making keyboard shortcut in any component.
+`useOnKeyDown` should **only** be used when making keyboard shortcut in a component.
 
 ```tsx
 import { useOnKeyDown } from "@jobber/hooks";
