--- a/packages/hooks/src/useOnKeyDown/useOnKeyDown.mdx
+++ b/packages/hooks/src/useOnKeyDown/useOnKeyDown.mdx
@@ -11,7 +11,7 @@ import { Text } from "@jobber/components/Text";
 
 # UseOnKeyDown
 
-`useOnKeyDown` is an extremly simple hook that can be for adding the keydown event handler when the component is mounted and remove them when it unmount.
+`useOnKeyDown` is a simple hook adding the keydown event handler when the component is mounted and removing when unmounted.
 
 `useOnKeyDown` should **only** be used when making keyboard shortcut in a component.
 
