Open LightBox when a Thumbnail is clicked

--- a/packages/components/src/ThumbnailGallery/ThumbnailGallery.mdx
+++ b/packages/components/src/ThumbnailGallery/ThumbnailGallery.mdx
@@ -49,6 +49,34 @@ import { ThumbnailGallery } from "@jobber/components/ThumbnailGallery";
         size: 12345,
         url:
           "https://p0.pikrepo.com/preview/321/691/shallow-focus-photography-of-tan-and-black-puppy-thumbnail.jpg"
+      },
+      {
+        name: "puppy5",
+        type: "image/jpeg",
+        size: 12345,
+        url:
+          "https://e7.pngegg.com/pngimages/279/812/png-clipart-cute-poodle-animal-puppy-thumbnail.png"
+      },
+      {
+        name: "puppy6",
+        type: "image/jpeg",
+        size: 12345,
+        url:
+          "https://e7.pngegg.com/pngimages/111/668/png-clipart-cute-puppy-dessert-material-pet-puppy-thumbnail.png"
+      },
+      {
+        name: "puppy7",
+        type: "image/jpeg",
+        size: 12345,
+        url:
+          "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTpZo00qEzLvHJakJgmftAqeRvovu-N1_TRQQ&usqp=CAU"
+      },
+      {
+        name: "puppy8",
+        type: "image/jpeg",
+        size: 12345,
+        url:
+          "https://upload.wikimedia.org/wikipedia/commons/6/63/Cute_puppy_%281%29.jpg"
       }
     ]}
   />
