Added description for the `ButtonDismiss` component MD

--- a/packages/components/src/ButtonDismiss/ButtonDismiss.mdx
+++ b/packages/components/src/ButtonDismiss/ButtonDismiss.mdx
@@ -12,7 +12,8 @@ import { ButtonDismiss } from ".";
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-Write a description about what ButtonDismiss component is trying to achieve.
+This private component is used as a dismissal button for public components, such
+as the modal component for example.
 
 ```ts
 import { ButtonDismiss } from "@jobber/components/ButtonDismiss";
