Add documentation for DrawerGrid component

--- a/packages/components/src/Drawer/Drawer.mdx
+++ b/packages/components/src/Drawer/Drawer.mdx
@@ -54,3 +54,8 @@ import { Page } from "@jobber/components/Page";
 ## Props
 
 <Props of={Drawer} />
+
+## Drawer Grid (Experimental)
+
+A `DrawerGrid` wraps the content and the drawer component. It allows the content
+to fill the available space when a user toggles the drawer.
