--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -45,17 +45,6 @@ De-emphasize a piece of text that is less important to the user
   <Text variation="subdued">Job note linked to related invoice</Text>
 </Playground>
 
-## Intro
-
-Used as an intro text that gives more information about the page title. This can
-only be used right after a page title.
-
-<Playground>
-  <Text variation="intro">
-    Attract new customers by asking happy clients for a Facebook recommendation
-  </Text>
-</Playground>
-
 ## Feedback message
 
 <Playground>
@@ -68,4 +57,26 @@ only be used right after a page title.
   <Text variation="info">
     Drag to rearrange the order that fields show up in Jobber
   </Text>
+</Playground>
+
+## Sizes
+
+## Intro
+
+`Text` can be used with different sizes.
+
+Typically `large` is to be used as an intro text that gives more information
+about the page title and can only be used right after a page title.
+
+<Playground>
+  <Text size="large">
+    Attract new customers by asking happy clients for a Facebook recommendation
+  </Text>
+</Playground>
+
+The `small` size is intended to be used as helper text on things like
+checkboxes.
+
+<Playground>
+  <Text size="small">What is this, a font for 🐜s?</Text>
 </Playground>
