Update docs about small size

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -74,8 +74,9 @@ about the page title and can only be used right after a page title.
   </Text>
 </Playground>
 
-The `small` size is intended to be used as helper text on things like
-checkboxes.
+The `small` size is intended to be used as small, helper content on things like
+checkboxes, radio buttons, inputs or any other UI elements that need help
+provided.
 
 <Playground>
   <Text size="small">What is this, a font for 🐜s?</Text>
