--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -29,7 +29,9 @@ import { Text } from "@jobber/components/Text";
 
 ---
 
-## Default
+## Variations
+
+### Default
 
 Use this as the body text
 
@@ -37,7 +39,7 @@ Use this as the body text
   <Text>Ask the information you need upfront from clients and new leads</Text>
 </Playground>
 
-## Subdued
+### Subdued
 
 De-emphasize a piece of text that is less important to the user
 
@@ -45,7 +47,7 @@ De-emphasize a piece of text that is less important to the user
   <Text variation="subdued">Job note linked to related invoice</Text>
 </Playground>
 
-## Feedback message
+### Feedback message
 
 <Playground>
   <Text variation="success">Invoice sent</Text>
@@ -61,7 +63,7 @@ De-emphasize a piece of text that is less important to the user
 
 ## Sizes
 
-## Intro
+### Intro
 
 `Text` can be used with different sizes.
 
