small change to rebuild

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -88,7 +88,7 @@ important information about a page, and requires greater prominence.
 
 <Playground>
   <Text size="large">
-    Attract new customers by asking happy clients for a Facebook recommendation
+    Attract new customers by asking happy clients for a Facebook recommendation.
   </Text>
 </Playground>
 
