--- a/packages/components/src/RadioGroup/RadioGroup.mdx
+++ b/packages/components/src/RadioGroup/RadioGroup.mdx
@@ -8,9 +8,10 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { RadioGroup, RadioOption } from ".";
 import { Content } from "@jobber/components/Content";
+import { Text } from "@jobber/components/Text";
 import { Checkbox } from "@jobber/components/Checkbox";
 import { Divider } from "@jobber/components/Divider";
-import { Icon } from "@jobber/components/Icon";
+import { Avatar } from "@jobber/components/Avatar";
 import { useState } from "react";
 
 # Radio Group
@@ -114,18 +115,33 @@ render the `RadioOptions` with `children`.
 **Note:** When using `children`, `label` and `description` are not allowed due
 to the face that they would collide with the `children` prop.
 
+**Note:** When using `children` it is the responsibility of the child to supply
+the proper accessible labels. If you are using children that do not contain
+text, an `aria-label` should be provided.
+
 <Playground>
   {() => {
-    const [company, setPhoto] = useState("job");
-    const icons = ["job", "quote", "request", "timer", "expense"];
+    const [company, setPhoto] = useState("JBR");
+    const users = [
+      { name: "Jobber", initials: "JBR" },
+      { name: "User 1", initials: "U1" },
+      { name: "User 2", initials: "U2" },
+      { name: "User 3", initials: "U3" },
+      { name: "User 4", initials: "U4" }
+    ];
     return (
-      <RadioGroup onChange={setPhoto} value={company}>
-        {icons.map(icon => (
-          <RadioOption value={icon}>
-            <Icon name={icon} />
-          </RadioOption>
-        ))}
-      </RadioGroup>
+      <>
+        <Content>
+          <Text>Select a user</Text>
+          <RadioGroup onChange={setPhoto} value={company}>
+            {users.map(user => (
+              <RadioOption value={user.name}>
+                <Avatar initials={user.initials} name={user.name} />
+              </RadioOption>
+            ))}
+          </RadioGroup>
+        </Content>
+      </>
     );
   }}
 </Playground>
