--- a/packages/components/src/RadioGroup/RadioGroup.mdx
+++ b/packages/components/src/RadioGroup/RadioGroup.mdx
@@ -113,7 +113,7 @@ If the `RadioGroup` is being used to select something other then text, you can
 render the `RadioOptions` with `children`.
 
 **Note:** When using `children`, `label` and `description` are not allowed due
-to the face that they would collide with the `children` prop.
+to the fact that they would collide with the `children` prop.
 
 **Note:** When using `children` it is the responsibility of the child to supply
 the proper accessible labels. If you are using children that do not contain
