--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -47,7 +47,7 @@ of footer, it should exist after Page.
 
 <Playground>
   <Page
-    title="Action Notifications"
+    title="Get to work!"
     intro="This isn't just talk. Get into action with some buttons and menus."
     primaryAction={{ label: "Send Food", onClick: () => alert("🥨") }}
     secondaryAction={{ label: "Send Drink", onClick: () => alert("🍹") }}
